View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023819 | Open CASCADE | OCCT:Application Framework | public | 2013-03-06 16:05 | 2013-04-29 15:24 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023819: Naming failures | ||||
Description | Tests are BAD: a) caf drvier: A1 - A9, B1 - B6 b) caf named_shape: E1 - E9, F1 - F6 | ||||
Tags | No tags attached. | ||||
Test case number | caf named_shape(002) E1-F6; driver(007) A1-B7 | ||||
child of | 0023788 | closed | OCCT tests don't catch Naming failures |
|
Fixed orientation regression. Branch CR23819. Review it, please. |
|
Reviewed! |
|
Dear BugMaster, Branch CR23819 (and products from GIT master) was compiled on Linux and Windows platforms and tested without rebase. SHA-1: 2b7f258153bc1afe16cbe9873cde394d417c96e3 Number of compiler warnings: occt component : Linux: 3 (3 on master) Windows: 11 (11 on master) products component : Linux: 0 (0 on master) Windows: 50 (50 on master) Regressions: http://occt-tests/CR23819-master-occt/Mandriva2010/caf/driver/B6.html http://occt-tests/CR23819-master-occt/Windows-32-VC9/caf/driver/B6.html caf driver(007) B6 Improvements: caf named_shape(002) E1-F6 caf driver(007) A1-B5, B7 Testing cases: caf named_shape(002) E1-F6 caf driver(007) A1-B7 Testing on Linux: Total MEMORY difference: 238545280 / 239011324 Total CPU difference: 17446.260000000377 / 14899.080000000042 Testing on Windows: Total MEMORY difference: 345529720 / 346096236 Total CPU difference: 24285.015625 / 21606.796875 There are not serious differences in images found by testdiff. |
|
The regression is fixed (in the script B6). New B6 is attached. |
2013-03-18 18:26 manager |
B6 (2,432 bytes) |
|
Test it, please. |
|
Dear BugMaster, Test case caf driver(007) B6 was corrected and pushed to git repository in the branch CR23819. |
occt: master 456b8422 2013-03-25 13:21:31
|
0023819: Naming failures Fixed regression with DummyVertex processing. Correction test cases for CR23819 |
Affected Issues 0023819 |
|
mod - src/TNaming/TNaming_NamedShape.cxx | Diff File | ||
mod - tests/caf/driver/A1 | Diff File | ||
mod - tests/caf/driver/A2 | Diff File | ||
mod - tests/caf/driver/A3 | Diff File | ||
mod - tests/caf/driver/A4 | Diff File | ||
mod - tests/caf/driver/A5 | Diff File | ||
mod - tests/caf/driver/A6 | Diff File | ||
mod - tests/caf/driver/A7 | Diff File | ||
mod - tests/caf/driver/A8 | Diff File | ||
mod - tests/caf/driver/A9 | Diff File | ||
mod - tests/caf/driver/B1 | Diff File | ||
mod - tests/caf/driver/B2 | Diff File | ||
mod - tests/caf/driver/B3 | Diff File | ||
mod - tests/caf/driver/B4 | Diff File | ||
mod - tests/caf/driver/B5 | Diff File | ||
mod - tests/caf/driver/B6 | Diff File | ||
mod - tests/caf/driver/B7 | Diff File | ||
mod - tests/caf/named_shape/E1 | Diff File | ||
mod - tests/caf/named_shape/E2 | Diff File | ||
mod - tests/caf/named_shape/E3 | Diff File | ||
mod - tests/caf/named_shape/E4 | Diff File | ||
mod - tests/caf/named_shape/E5 | Diff File | ||
mod - tests/caf/named_shape/E6 | Diff File | ||
mod - tests/caf/named_shape/E7 | Diff File | ||
mod - tests/caf/named_shape/E8 | Diff File | ||
mod - tests/caf/named_shape/E9 | Diff File | ||
mod - tests/caf/named_shape/F1 | Diff File | ||
mod - tests/caf/named_shape/F2 | Diff File | ||
mod - tests/caf/named_shape/F3 | Diff File | ||
mod - tests/caf/named_shape/F4 | Diff File | ||
mod - tests/caf/named_shape/F5 | Diff File | ||
mod - tests/caf/named_shape/F6 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-03-06 16:05 |
|
New Issue | |
2013-03-06 16:05 |
|
Assigned To | => szy |
2013-03-06 16:07 |
|
Relationship added | child of 0023788 |
2013-03-06 16:08 |
|
Test case number | => caf driver, named_shape |
2013-03-06 16:08 |
|
Status | new => assigned |
2013-03-07 16:17 |
|
Note Added: 0023628 | |
2013-03-07 16:17 |
|
Assigned To | szy => vro |
2013-03-07 16:17 |
|
Status | assigned => resolved |
2013-03-12 08:16 | vro | Note Added: 0023652 | |
2013-03-12 08:16 | vro | Assigned To | vro => mkv |
2013-03-12 08:16 | vro | Status | resolved => reviewed |
2013-03-13 15:34 |
|
Target Version | => 6.6.0 |
2013-03-13 18:57 |
|
Note Added: 0023704 | |
2013-03-13 18:58 |
|
Note Edited: 0023704 | |
2013-03-13 19:00 |
|
Test case number | caf driver, named_shape => caf named_shape(002) E1-F6; driver(007) A1-B7 |
2013-03-13 19:00 |
|
Assigned To | mkv => szv |
2013-03-13 19:00 |
|
Status | reviewed => assigned |
2013-03-15 10:37 |
|
Assigned To | szv => szy |
2013-03-18 18:25 |
|
Note Added: 0023783 | |
2013-03-18 18:25 |
|
Status | assigned => resolved |
2013-03-18 18:26 |
|
File Added: B6 | |
2013-03-18 18:27 |
|
Note Edited: 0023783 | |
2013-03-18 18:27 |
|
Note Added: 0023784 | |
2013-03-18 18:27 |
|
Assigned To | szy => mkv |
2013-03-18 18:27 |
|
Status | resolved => reviewed |
2013-03-22 18:23 |
|
Note Added: 0023871 | |
2013-03-22 18:23 |
|
Assigned To | mkv => bugmaster |
2013-03-22 18:23 |
|
Status | reviewed => tested |
2013-03-25 18:39 |
|
Changeset attached | => occt master 456b8422 |
2013-03-25 18:39 |
|
Assigned To | bugmaster => szy |
2013-03-25 18:39 |
|
Status | tested => verified |
2013-03-25 18:39 |
|
Resolution | open => fixed |
2013-04-23 13:35 |
|
Status | verified => closed |
2013-04-29 15:24 |
|
Fixed in Version | => 6.6.0 |