0023819: Naming failures Fixed regression with DummyVertex processing. Correction test cases for CR23819